--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -11,20 +11,19 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Conheca a Atletica e seus titulos</h2>
-        <p>
-            Fundada em 2012 por alunos da Economia UFF, a expansao astronomica da nossa atletica se deu por um intenso trabalho de sua diretoria e atletas
+        <h2>Know more about us</h2>
+        <p>Fundada em 2012 por alunos da Economia UFF, a expansao astronomica da nossa atletica se deu por um intenso trabalho de sua diretoria e atletas
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.facebook.com/AtleticaEconomiaUFF/">Visit our facebook page &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>SuperCopa is on the way!</h2>
+        <p>The best price for Jogos PACKAGE! Let's win this s#$%!</p>
+        <p><a class="btn btn-default" href="https://www.facebook.com/events/1112563558906382/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>Awards, Trophies and TSUNAMI!!</h2>
+        <p>Stay tuned in our awards, trophies won so far and our fabulous BATERA!</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
