--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -19,11 +19,11 @@
     <div class="col-md-4">
         <h2>SuperCopa is on the way!</h2>
         <p>The best price for Jogos PACKAGE! Let's win this s#$%!</p>
-        <p><a class="btn btn-default" href="https://www.facebook.com/events/1112563558906382/">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.facebook.com/events/1112563558906382/">Buy your package right now! &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Awards, Trophies and TSUNAMI!!</h2>
-        <p>Stay tuned in our awards, trophies won so far and our fabulous BATERA!</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Awards, Trophies and Tsunami!!</h2>
+        <p>Stay tuned in our awards, trophies won so far and our fabulous BATERIA!</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"> &raquo;</a></p>
     </div>
 </div>
