--- a/AtleticaEcoUff/Content/Site.css
+++ b/AtleticaEcoUff/Content/Site.css
@@ -10,11 +10,23 @@
 .jumbotron {
     background-image: url(vemser.png);
     background-size:cover;
-    color:whitesmoke;
-    vertical-align:text-top;
+    color:black;
+    padding-bottom:40px;
 }
 
+.navbar navbar-inverse navbar-fixed-top {
+    background-color: #0f79a9;
+    color: #ffbe0f;
+}
 
+.navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 20px;
+    background-color: #0f79a9;
+    color: #ffbe0f;
+
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
