--- a/AtleticaEcoUff/Content/Site.css
+++ b/AtleticaEcoUff/Content/Site.css
@@ -9,24 +9,11 @@
 
 .jumbotron {
     background-image: url(vemser.png);
-    background-size:cover;
-    color:black;
-    padding-bottom:40px;
+    background-size: cover;
+    color: whitesmoke;
+    padding-bottom: 100px;
 }
 
-.navbar navbar-inverse navbar-fixed-top {
-    background-color: #0f79a9;
-    color: #ffbe0f;
-}
-
-.navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    line-height: 20px;
-    background-color: #0f79a9;
-    color: #ffbe0f;
-
-}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
