--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -24,6 +24,6 @@
     <div class="col-md-4">
         <h2>Awards, Trophies and Tsunami!!</h2>
         <p>Stay tuned in our awards, trophies won so far and our fabulous BATERIA!</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"> &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"> Visit our instagram &raquo;</a></p>
     </div>
 </div>
