--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -15,15 +15,18 @@
         <p>Fundada em 2012 por alunos da Economia UFF, a expansao astronomica da nossa atletica se deu por um intenso trabalho de sua diretoria e atletas
         </p>
         <p><a class="btn btn-default" href="https://www.facebook.com/AtleticaEconomiaUFF/">Visit our facebook page &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
         <h2>SuperCopa is on the way!</h2>
         <p>The best price for Jogos PACKAGE! Let's win this s#$%!</p>
         <p><a class="btn btn-default" href="https://www.facebook.com/events/1112563558906382/">Buy your package right now! &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
         <h2>Awards, Trophies and Tsunami!!</h2>
         <p>Stay tuned in our awards, trophies won so far and our fabulous BATERIA!</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"> Visit our instagram &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.instagram.com/atleticaecouff/"> Visit our instagram &raquo;</a></p>
+        
     </div>
 </div>
