--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -3,23 +3,24 @@
 }
 
 <div class="jumbotron">
-    <h1>Associacao Atletica Academica Thiago Dufrayer</h1>
-    <p class="lead">ECONOMIA UFF - Bi-Campea dos Jogos Financeiros (2016 & 2018)</p>
+    <h1>Athletics Association Thiago Dufrayer</h1>
+    <p class="lead">Biggest Champion of Financial Games (2016 & 2018)</p>
     <p><a href="https://athleticseconomics-uff.azurewebsites.net" class="btn btn-primary btn-lg">Click to know more about us &raquo;</a></p>
     
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Know more about us</h2>
-        <p>Fundada em 2012 por alunos da Economia UFF, a expansao astronomica da nossa atletica se deu por um intenso trabalho de sua diretoria e atletas
+        <h2>Economics UFF</h2>
+        <p>
+            Founded in 2012 by students of the Federal University of Economics, the astronomical expansion of our athletics was due to an intense work of its board and athletes
         </p>
         <p><a class="btn btn-default" href="https://www.facebook.com/AtleticaEconomiaUFF/">Visit our facebook page &raquo;</a></p>
         
     </div>
     <div class="col-md-4">
         <h2>SuperCopa is on the way!</h2>
-        <p>The best price for Jogos PACKAGE! Let's win this s#$%!</p>
+        <p>The best price for our Games PACKAGE! Let's win this s#$%!</p>
         <p><a class="btn btn-default" href="https://www.facebook.com/events/1112563558906382/">Buy your package right now! &raquo;</a></p>
         
     </div>
