--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Athletics Association Thiago Dufrayer</h1>
+    <h1>Academic Athletics Association Thiago Dufrayer</h1>
     <p class="lead">Biggest Champion of Financial Games (2016 & 2018)</p>
     <p><a href="https://athleticseconomics-uff.azurewebsites.net" class="btn btn-primary btn-lg">Click to know more about us &raquo;</a></p>
     
