--- a/AtleticaEcoUff/Content/Site.css
+++ b/AtleticaEcoUff/Content/Site.css
@@ -8,7 +8,7 @@
 }
 
 .jumbotron {
-    background-image: url(vemser.png);
+    background-image: url(atletica.png);
     background-size: cover;
     color: whitesmoke;
     padding-bottom: 200px;
