--- a/AtleticaEcoUff/Views/Home/Index.cshtml
+++ b/AtleticaEcoUff/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Academic Athletics Association Thiago Dufrayer</h1>
-    <p class="lead">Biggest Champion of Financial Games (2016 & 2018)</p>
+    <p class="lead">Biggest Champion of Financial Games</p>
     <p><a href="https://athleticseconomics-uff.azurewebsites.net" class="btn btn-primary btn-lg">Click to know more about us &raquo;</a></p>
     
 </div>
