--- a/AtleticaEcoUff/Views/Shared/_Layout.cshtml
+++ b/AtleticaEcoUff/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Atletica ECOUFF Application</p>
+            <p>&copy; @DateTime.Now.Year Rodrigo Lima - 200308021<br> Server-Side Scripting ASP.NET COMP2084-18F-11187<br>Atletica ECOUFF Application</p>
         </footer>
     </div>
 
