--- a/AtleticaEcoUff/Views/Athletes/Details.cshtml
+++ b/AtleticaEcoUff/Views/Athletes/Details.cshtml
@@ -37,7 +37,17 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.athlete_id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.athlete_id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+}
+
+@if (!User.Identity.IsAuthenticated)
+{
+    <p>
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+}
